--- a/_posts/.gitignore
+++ b/_posts/.gitignore
@@ -1,4 +1,9 @@
 **
+!2018-09-10-phy-interface.md
+!2019-09-19-delay-locked-loop.md
+!2021-04-13-olive-pro-max-tws.md
+!2021-12-20-equalizer.md
+!2022-11-13-speech-enhancement.md
 !2021-07-13-What-is-the-basic-concept-and-Framework-in-Nature-Lanugage-Process?.md
 # !2021-09-27-W2.md
 # !2021-09-27-W3.md
