--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -124,7 +124,7 @@ cs224n-eng:
       - title:  W1 What is the basic concept and Framework in NLP?
         url:    /2021/07/13/What-is-the-basic-concept-and-Framework-in-Nature-Lanugage-Process?.html
       - title:  W2
-        url:    /2021/09/27/22.html
+        url:    /2021/09/27/W2.html
       - title:  W3
         url:    /2021/09/27/W3.html
       - title:  W4
