--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -123,11 +123,11 @@ cs224n-eng:
         url:    /2022/11/13/CS224N-Standford.html
       - title:  W1 What is the basic concept and Framework in NLP?
         url:    /2021/07/13/What-is-the-basic-concept-and-Framework-in-Nature-Lanugage-Process?.html
-      - title:  W2
-        url:    /2021/09/27/W2.html
-      - title:  W3
-        url:    /2021/09/27/W3.html
-      - title:  W4
-        url:    /2021/09/27/W4.html
-      - title:  W5
-        url:    /2021/09/27/W5.html
+      - title:  W2 How to Calculate in Neural Network and What is the Dependency Parsing?
+        url:    /2021/09/27/How-to-Calculate-in-Neural-Network-and-What-is-the-Dependency-Parsing.html
+      - title:  W3 How to struct the Dependency Parsing and the Problem solved by RNN, Bi-RNN, GRU, LTSM?
+        url:    /2021/09/27/How-to-struct-the-Dependency-Parsing-and-the-Problem-solved-by-RNN-Bi-RNN-GRU-LTSM?.html
+      - title:  W4 Machine Translation, Sequence-to-Sequence, And Attention
+        url:    /2021/09/27/Machine-Translation-Sequence-to-Sequence-And-Attention.html
+      - title:  W5 Self-Attention and Transformers
+        url:    /2021/09/27/Self-Attention-and-Transformers.html
