--- a/_posts/.gitignore
+++ b/_posts/.gitignore
@@ -5,10 +5,10 @@
 !2021-12-20-equalizer.md
 !2022-11-13-speech-enhancement.md
 !2021-07-13-What-is-the-basic-concept-and-Framework-in-Nature-Lanugage-Process?.md
-!2021-09-27-W2.md
-!2021-09-27-W3.md
-!2021-09-27-W4.md
-!2021-09-27-W5.md
+!2021-09-27-How-to-Calculate-in-Neural-Network-and-What-is-the-Dependency-Parsing.md
+!2021-09-27-How-to-struct-the-Dependency-Parsing-and-the-Problem-solved-by-RNN-Bi-RNN-GRU-LTSM?.md
+!2021-09-27-Machine-Translation-Sequence-to-Sequence-And-Attention.md
+!2021-09-27-Self-Attention-and-Transformers.md
 !2021-09-27-continuous-back-of-words.md
 !2021-09-27-evaluation-of-word-vectors.md
 !2021-09-27-global-vectors-for-word-representation.md
