--- a/_posts/.gitignore
+++ b/_posts/.gitignore
@@ -1,9 +1,4 @@
 **
-!2018-09-10-phy-interface.md
-!2019-09-19-delay-locked-loop.md
-!2021-04-13-olive-pro-max-tws.md
-!2021-12-20-equalizer.md
-!2022-11-13-speech-enhancement.md
 !2022-06-18-test-for-post.md
 !2022-07-01-disk-partition-and-mount.md
 !2022-07-01-gpu-conda-environment-for-tensorflow-pytorch.md
@@ -26,5 +21,12 @@
 # !2021-09-27-negative-sampling.md
 # !2021-09-27-skip-gram.md
 
+
 !projects/
+# !2018-09-10-phy-interface.md
+# !2019-09-19-delay-locked-loop.md
+# !2021-04-13-olive-pro-max-tws.md
+# !2021-12-20-equalizer.md
+# !2022-11-13-speech-enhancement.md
+
 !.gitignore
