--- a/_posts/.gitignore
+++ b/_posts/.gitignore
@@ -1,10 +1,12 @@
 **
-!2022-06-18-test-for-post.md
-!2022-07-01-disk-partition-and-mount.md
-!2022-07-01-gpu-conda-environment-for-tensorflow-pytorch.md
-!2022-07-01-os-setup-for-machine-learning.md
-!2022-07-01-samba-installation-in-ubuntu.md
-!2022-07-01-user-and-group.md
+
+!setup/
+# !2022-06-18-test-for-post.md
+# !2022-07-01-disk-partition-and-mount.md
+# !2022-07-01-gpu-conda-environment-for-tensorflow-pytorch.md
+# !2022-07-01-os-setup-for-machine-learning.md
+# !2022-07-01-samba-installation-in-ubuntu.md
+# !2022-07-01-user-and-group.md
 
 !cs224n
 # !2022-11-13-CS224N-Standford.md
