add cs224n chapter week 2

--- a/_posts/cs224n/w2/.gitignore
+++ b/_posts/cs224n/w2/.gitignore
@@ -1,2 +1,8 @@
 **
+!2021-07-13-neural-network.md
+!2021-07-13-stochastic-gradient-descent-nn.md
+!2021-07-13-dependency-parsing.md
+# !2021-07-13-greedy-deterministic-transition-based-parsing.md
+# !2021-07-13-neural-dependency-parser.md
+
 !.gitignore
