--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url     : # the base hostname & protocol for your site e.g. https://www.someone.
 baseurl : # does not include hostname
 title   : Seunghyun Oh
 description: > # this means to ignore newlines until "Language & timezone"
-  Machine Learning for Speech
+  Machine Learning for Speech in Embedded System
 
 
 ## => Language and Timezone
@@ -38,7 +38,7 @@ author:
   name      : Seunghyun Oh
   url       : https://ooshyun.github.io
   avatar    : assets/favicon_package/favicon-32x32.png # path or url of avatar image (square)
-  bio       : I am digital signal processing engineer
+  bio       : I am Embedded digital signal processing engineer for machine learning
   email     : daniel.ohsj@gmail.com
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
