add CPU and scheduling

--- a/_posts/computer-science/.gitignore
+++ b/_posts/computer-science/.gitignore
@@ -2,4 +2,5 @@
 !2023-02-24-Fixed-point-vs-Floating-point.md
 !2023-03-09-Binary-tree.md
 !2023-04-20-Process-vs-Thread.md
+!2023-05-06-CPU-and-CPU-Scheduling.md
 !.gitignore
