--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ sharing:
 ## => Comments
 ##############################
 comments:
-  provider: false # false (default), "disqus", "gitalk", "valine", "custom"
+  provider: gitalk # (default), "disqus", "gitalk", "valine", "custom"
 
   ## Disqus
   disqus:
@@ -126,11 +126,11 @@ comments:
   ## Gitalk
   # please refer to https://github.com/gitalk/gitalk for more info.
   gitalk:
-    clientID    : # GitHub Application Client ID
-    clientSecret: # GitHub Application Client Secret
-    repository  : # GitHub repo
-    owner       : # GitHub repo owner
-    admin: # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
+    clientID    : e08a1e93072c38209a89 # GitHub Application Client ID
+    clientSecret: f5dc8af9855f6eb1a8342033c58a5f5314b1cd8f # GitHub Application Client Secret
+    repository  : ooshyun.github.io # GitHub repo
+    owner       : ooshyun # GitHub repo owner
+    admin: ooshyun # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
       # - your GitHub Id
 
   ## Valine
