--- a/_config.yml
+++ b/_config.yml
@@ -130,8 +130,8 @@ comments:
     clientSecret: f5dc8af9855f6eb1a8342033c58a5f5314b1cd8f # GitHub Application Client Secret
     repository  : ooshyun.github.io # GitHub repo
     owner       : ooshyun # GitHub repo owner
-    admin: ooshyun # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
-      # - your GitHub Id
+    admin:  # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
+      - ooshyun # - your GitHub Id
 
   ## Valine
   # please refer to https://valine.js.org/en/ for more info.
