fix: bug in comments

--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ comments:
   gitalk:
     clientID    : e08a1e93072c38209a89 # GitHub Application Client ID
     clientSecret: f5dc8af9855f6eb1a8342033c58a5f5314b1cd8f # GitHub Application Client Secret
-    repository  : ooshyun.github.io # GitHub repo
+    repository  : ooshyun.github.io.comments # GitHub repo
     owner       : ooshyun # GitHub repo owner
     admin:  # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
       - ooshyun # - your GitHub Id
