--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ sharing:
 ## => Comments
 ##############################
 comments:
-  provider: gitalk # (default), "disqus", "gitalk", "valine", "custom"
+  provider: "gitalk" # (default), "disqus", "gitalk", "valine", "custom"
 
   ## Disqus
   disqus:
