add: optimization-tiny-engine part2

--- a/_posts/machine-learning/.gitignore
+++ b/_posts/machine-learning/.gitignore
@@ -1,4 +1,5 @@
 **
 !2023-01-24-ML-statistic-basic-concepts.md
 !2023-12-04-Optimization-for-tiny-engine-1.md
+!2023-12-16-Optimization-for-tiny-engine-2.md
 !.gitignore
