--- a/_posts/machine-learning/.gitignore
+++ b/_posts/machine-learning/.gitignore
@@ -2,4 +2,5 @@
 !2023-01-24-ML-statistic-basic-concepts.md
 !2023-12-04-Optimization-for-tiny-engine-1.md
 !2023-12-16-Optimization-for-tiny-engine-2.md
+!2024-01-19-Quantization-1.md
 !.gitignore
